tests/ui/parser/variadic-ffi-nested-syntactic-fail.stderr
error[E0743]: C-variadic type `...` may not be nested inside another type
  --> $DIR/variadic-ffi-nested-syntactic-fail.rs:1:25
   |
LL | fn f1<'a>(x: u8, y: &'a ...) {}
   |                         ^^^

error[E0743]: C-variadic type `...` may not be nested inside another type
  --> $DIR/variadic-ffi-nested-syntactic-fail.rs:4:29
   |
LL | fn f2<'a>(x: u8, y: Vec<&'a ...>) {}
   |                             ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0743`.
